feat: regex domain, response serializer
